# controllers/notices/addNotice.js
@@ -5,8 +5,10 @@ const { uploadImg } = require("../../helpers");
 const addNotice = async (req, res) => {
   const { _id: owner } = req.user;
 
+  const [city, region] = req.body.location.split(", ");
+
   if (!req.file) {
-    const notice = await Notice.create({ ...req.body, owner });
+    const notice = await Notice.create({ ...req.body, city, region, owner });
     res.status(201).json({
       code: 201,
       status: "success",
@@ -21,6 +23,8 @@ const addNotice = async (req, res) => {
     const notice = await Notice.create({
       ...req.body,
       owner,
+      city,
+      region,
       imageURL: imageURL,
     });
     fs.unlink(tempUpload);
@@ -29,7 +33,16 @@ const addNotice = async (req, res) => {
       code: 201,
       status: "success",
       message: "Add user notice",
-      data: notice,
+      data: {
+        _id: notice._id,
+        category: notice.category,
+        title: notice.title,
+        birthday: notice.birthday,
+        breed: notice.breed,
+        city: notice.city,
+        imageURL: notice.imageURL,
+        price: notice.price,
+      },
     });
   }
 };
