# controllers/notices/getUserNotices.js
@@ -4,10 +4,14 @@ const { NotFound } = require("http-errors");
 const getUserNotices = async (req, res) => {
   const { _id: owner, email } = req.user;
 
-  const notices = await Notice.find({ owner });
-  if (!notices) {
+  const result = await Notice.find({ owner });
+  if (!result) {
     throw new NotFound(404);
   }
+
+  const notices = result.map(notice => {
+    return { _id: notice._id, category: notice.category, title: notice.title, birthday: notice.birthday, breed: notice.breed, city: notice.city, imageURL: notice.imageURL, price: notice.price };
+  });
 
   res.json({
     code: 200,
